lesson19/k8s-network-policies-system/istio/virtualservices/dashboard-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dashboard-vs
  namespace: frontend
spec:
  hosts:
  - "*"
  gateways:
  - log-analytics-gateway
  http:
  - match:
    - uri:
        prefix: "/api"
    route:
    - destination:
        host: api-gateway.backend.svc.cluster.local
        port:
          number: 8000
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: dashboard.frontend.svc.cluster.local
        port:
          number: 80
